# sentinel-agent-content-scanner

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: agent.rs  clamd.rs  config.rs  lib.rs  main.rs
