[package]
name = "zentinel-agent-content-scanner"
version = "0.2.0"
edition = "2021"
authors = ["Zentinel Core Team"]
description = "Content Scanner agent for Zentinel - malware scanning with ClamAV"
license = "MIT"
repository = "https://github.com/zentinelproxy/zentinel-agent-content-scanner"
keywords = ["zentinel", "content-scanner", "malware", "clamav", "security"]
categories = ["network-programming", "web-programming"]

[dependencies]
zentinel-agent-protocol = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
tonic = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[bin]]
name = "zentinel-content-scanner-agent"
path = "src/main.rs"
